# speedy

./: Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  smithery.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
src/: client.rs  main.rs  style.css
src-tauri/: Cargo.toml  README.md  build.rs  main.rs  tauri.conf.json
src-tauri/src/: api.rs  client.rs  db.rs  db_manager.rs  lib.rs  main.rs  state.rs
src/pages/: _app.tsx  index.tsx
src/pages/download/: [id].tsx
src/src/: App.tsx  icons.tsx  icons.v2.tsx  utils.ts
src/src/assets/styles/: button.module.scss  components.module.scss  downloader.module.scss  global.css  manager.module.scss
src/src/bindings/: commands.ts  index.ts
src/src/components/: DownloadManager.tsx  button.tsx  downloadProgressBar.tsx
src/src/components/UI/: Button.tsx  Checkbox.tsx  CommandMenu.tsx  ContextMenu.tsx  ContextMenuWrapper.tsx  Dialog.tsx  DropdownMenu.tsx  Select.tsx  Tabs.tsx  index.ts
src/src/components/buttons/: button.v2.tsx
src/src/components/iconButton/: index.tsx
src/src/components/input/: searchInput.tsx  urlInput.tsx
src/src/components/progressBars/: compactProgressBar.tsx
src/src/data/: mockData.ts
src/src/hooks/: useDownloads.ts
src/src/screens/home/: downloadItems.tsx  index.tsx
src/src/screens/home/layout/: downloadList.tsx  header.tsx  sidebar.tsx  statusBar.tsx
src/src/types/: bindings.d.ts  bindings.ts  download.ts  download.tsx
