[package]
name = "tauri-app"
version = "0.1.0"
description = "A download accelerator application built with Tauri"
authors = ["Utkarsh Dixit"]
license = "MIT"
repository = "https://github.com/utkarsh-dixit/speedy"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tauri Framework
tauri = { version = "1.2", features = ["shell-open"] }

# Async/HTTP
reqwest = { version = "0.11.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }

[features]
# By default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# This feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
