[package]
name = "tauri-app"
version = "0.1.0"
description = "A download accelerator application built with Tauri"
authors = ["Utkarsh Dixit"]
license = "MIT"
repository = "https://github.com/utkarsh-dixit/speedy"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tauri Framework
tauri = { version = "1.4", features = [ "http-all", "path-all", "fs-read-dir", "window-all", "fs-create-dir", "dialog-all", "fs-read-file", "fs-write-file", "shell-open"] }

# Async/HTTP
reqwest = { version = "0.11.18", features = ["json", "stream"], default-features = false }
tokio = { version = "1.28.2", features = ["full"] }
futures-util = "0.3.28"  # Update to a newer version

# Dirs crate for accessing standard platform-specific directories
dirs = "5.0.1"
chrono = { version = "0.4.31", features = ["serde"] }

# Database
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio-rusqlite = "0.4.0"

[features]
# By default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# This feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
